@@ -47,13 +47,13 @@ class ParameterDataImportServiceTest extends AbstractTest {
         };
         service.importData(config);
 
-        List<ApplicationParameter> params = dao.findAll().collect(Collectors.toList());
+        List<ApplicationParameter> params = dao.findAll().toList();
         Assertions.assertNotNull(params);
         Assertions.assertEquals(9, params.size());
 
         config.getMetadata().put("operation", "NONE");
 
-        params = dao.findAll().collect(Collectors.toList());
+        params = dao.findAll().toList();
         Assertions.assertNotNull(params);
         Assertions.assertEquals(9, params.size());
     }
@@ -89,7 +89,7 @@ class ParameterDataImportServiceTest extends AbstractTest {
             }
         });
 
-        List<ApplicationParameter> params = dao.findAll().collect(Collectors.toList());
+        List<ApplicationParameter> params = dao.findAll().toList();
         Assertions.assertNotNull(params);
         Assertions.assertEquals(1, params.size());
 
@@ -139,7 +139,7 @@ class ParameterDataImportServiceTest extends AbstractTest {
             }
         });
 
-        List<ApplicationParameter> params = dao.findAll().collect(Collectors.toList());
+        List<ApplicationParameter> params = dao.findAll().toList();
         Assertions.assertNotNull(params);
         Assertions.assertEquals(10, params.size());
         List<ApplicationParameter> p1 = dao.findByApplicationIdAndParameterKeys("app1", List.of("param"));
@@ -179,7 +179,7 @@ class ParameterDataImportServiceTest extends AbstractTest {
             }
         });
 
-        List<ApplicationParameter> params = dao.findAll().collect(Collectors.toList());
+        List<ApplicationParameter> params = dao.findAll().toList();
         Assertions.assertNotNull(params);
         Assertions.assertEquals(9, params.size());
         List<ApplicationParameter> p1 = dao.findByApplicationIdAndParameterKeys("app1", List.of("param"));
